config/manifests/deployments.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: debian
  namespace: default
  labels:
    app: debian
spec:
  selector:
    matchLabels:
      app: debian
  replicas: 1
  template:
    metadata:
      labels:
        app: debian
    spec:
      containers:
      - name: debian
        image: debian:stable-slim
        command: ["/bin/sh"]
        args: ["-c", "apt-get update; apt install -y wget systemctl vim net-tools curl; wget https://github.com/open-telemetry/opentelemetry-collector-releases/releases/download/v0.101.0/otelcol-contrib_0.101.0_linux_arm64.deb ; mkdir -p /var/lib/otelcol/file_storage/output /var/lib/otelcol/file_storage/receiver ; chmod 777 /var/lib/otelcol/file_storage/output /var/lib/otelcol/file_storage/receiver ; dpkg -i --force-confold otelcol-contrib_0.101.0_linux_arm64.deb ; sleep 604800"]
        imagePullPolicy: IfNotPresent
        # ports:
        #   - containerPort: 9091
        #   - containerPort: 8888
        #   - containerPort: 4242
