config/manifests/service.yaml
# apiVersion: v1
# kind: Service
# metadata:
#   labels:
#     app.kubernetes.io/name: kube-image-updater
#     app.kubernetes.io/managed-by: kustomize
#   name: webhook-service
# spec:
#   ports:
#     - port: 443
#       protocol: TCP
#       targetPort: 8443
---
apiVersion: v1
kind: Service
metadata:
  name: kimup-webhook-mutating
  namespace: default
spec:
  type: ExternalName
  externalName: your.example.com
  ports:
    - port: 8443
      protocol: TCP
      targetPort: 8443
