config/manifests/mutatingWebhookConfiguration.yaml
---
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: mutating-webhook-configuration
  namespace: default
webhooks:
  - sideEffects: None
    admissionReviewVersions: ["v1"]
    name: your.example.com
    clientConfig:
      url: https://your.example.com:8443/mutate
      # service:
      #   name: kimup-webhook-mutating
      #   namespace: default
      #   path: /mutate
      #   port: 8443
      # CA certificate with BEGIN and END lines - base64 encoded
      caBundle: "LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUZFekNDQXZ1Z0F3SUJBZ0lDQitZd0RRWUpLb1pJaHZjTkFRRUxCUUF3R3pFWk1CY0dBMVVFQ2hNUWVXOTEKY2k1bGVHRnRjR3hsTG1OdmJUQWVGdzB5TkRBNU1qY3hNalExTWpoYUZ3MHlOVEE1TWpjeE1qUTFNamhhTUJzeApHVEFYQmdOVkJBb1RFSGx2ZFhJdVpYaGhiWEJzWlM1amIyMHdnZ0lpTUEwR0NTcUdTSWIzRFFFQkFRVUFBNElDCkR3QXdnZ0lLQW9JQ0FRQzNKeW1LNjF0UEJQUVJJL013MldwekZlckpwN3YwWFFsK0tuc1N2ak5NWFUrNXJDWTEKb1J1cUwzVkxNQnN4ZXl3SlVxZ3k3dllJWFZOOFZMT0xKS2VDem9ybUE5dVlVb3czRE9sTzQwMGFuOEFNS0wzUAovWHl3VGltRUJ [...]
    rules:
      - operations: [ "CREATE", "UPDATE"]
        apiGroups: [""]
        apiVersions: ["v1"]
        resources: ["pods"]
        scope: "Namespaced"
        # namespaceSelector:
        #   matchExpressions:
        #     - {key: "name", operator: "In", values: ["core-services"]}
    failurePolicy: Fail
